# cuda-driver-wrapper

./: README.md
wrapper/: Cargo.toml  gen_rust_ffi.sh
wrapper/resources/: kernel.cu  kernel.ptx
wrapper/src/: driver-ffi.rs  lib.rs
